--- a/Dog_Video.html
+++ b/Dog_Video.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8">
 	</head>
 	<body>
 		<nav>
@@ -8,9 +9,9 @@
 			<a href="dog_assignment.html">Dog Picture</a>
 			<a href="Dog_Video.html">Dog_Video</a>
 		</nav>
+			<a href="https://youtu.be/NwlwJjelgzs">Funny Youtube video of dogs</a>
 
-	
-		<a href="dogs.jpg">pic of dogs</a>
-
+	<main>
+	</main>
 	</body>
 </html>
