--- a/assignment.html
+++ b/assignment.html
@@ -5,6 +5,12 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
+		<nav>
+			<a href="assignment.html">Home</a>
+			<a href="dog_assignment.html">Dog Picture</a>
+			<a href="Dog_Video.html">Dog_Video</a>
+		</nav>
+
 	<h3>small header</h3>
 	<main>
 	<h1>big header</h1>
