--- a/Project/index.html
+++ b/Project/index.html
@@ -151,11 +151,39 @@
 
 		<!--rsvp-->
 		<section id="contact">
+			<div class="container">
+				<div class="heading-padding">
+					<h1 class="heading-padding">Reservations</h1>
+					<div class="reservation">
+						<h2><span>Your adventure is just around the moon.</span>
+							<br>Reserve your flight today!
+						</h2>
+						<p class="rsvp-text">
+							Please provide us with your basic contact information.
+						</p>
+						<div class="form-rsvp">
+							<form action="" method="post">
+								<input class="rsvp" type="text" value="" placeholder="First Name">
+								<input class="rsvp" type="text" value="" placeholder="Last Name">
+								<input class="rsvp" type="text" value="" placeholder="Email Address">
+								<input class="rsvp" type="text" value="" placeholder="Phone Number">
+								<div class="form-spacer">
+									<label class="terms">Terms and Conditions</label>
+								</div>
+								<div>
+									<input type="submit" value="Submit">
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 		<!--end rsvp-->
 
 		<!--footer-->
 		<div id="footer">
+			www.thespacestation.space &nbsp;|&nbsp; &copy; 2019
 		</div>
 		<!--end footer-->
 
