--- a/Project/index.html
+++ b/Project/index.html
@@ -34,7 +34,7 @@
 		<section id="gallery">
 			<div class="container">
 				<h1>Gallery</h1>
-				<div class="flex-conatiner">
+				<div class="flex-container">
 
 					<!-- photo-container 1 -->
 					<div class="photo-container">
