pushing one page website assignment

--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Travel Locations</title>
+		<link rel="stylesheet" href="./CSS/one_page_website.css">
 	</head>
 
 	<body>
@@ -26,10 +27,10 @@
 		</section>
 		<!--end section-->
 		<form action="" method="put" id="contact">
-		First name: <input type="text" name="First_Name"><br>
-		Last name: <input type="text" name="Last_Name"><br>
-		Phone Number: <input type="text" name="Phone_Number"><br>	
-		Dream Destination: <input type="text" name="Dream_Destination"><br>
+		First name: <input class="input" type="text" name="First_Name"><br>
+		Last name: <input class="input" type="text" name="Last_Name"><br>
+		Phone Number: <input class="input" type="text" name="Phone_Number"><br>	
+		Dream Destination: <input class="input" type="text" name="Dream_Destination"><br>
 
 		<input type="submit" value="Submit">
 		</form>
