finished html final assignment
finished html final assignment

--- a/html-final/index.html
+++ b/html-final/index.html
@@ -60,6 +60,48 @@
     </div> 
 
 <!--github section-->
+    <div class="Row" id="GitHub">
+        <div class="Column_1">
+            <h1>GitHub</h1>
+            <p>You can view my progress on my GitHub profile here:<br>
+            <center><a href="https://github.com/JacobSKessler" target="_blank">Jacob Kessler's GitHub</a></center></p>
+        </div>
+
+        <div class="Column_2">
+                <a href="https://github.com/JacobSKessler" target="_blank"><img src="./Stylesheet/Images/GitHub.png" alt="GitHub"></a>
+        </div>
+    </div>
+
+<!--contact section-->
+    <div class="Row" id="Contact">
+        <div class="Column_3">
+            <img src="./Stylesheet/Images/Contact.jpg" alt="Contact_Image">
+        </div>
+
+        <div class="Column_1">
+            <h1>Contact</h1>
+                <form action="" method="GET">
+                    <label>Name:</label>
+                        <input type="text" placeholder="Please enter your name here">
+                    <label>Email:</label>
+                        <input type="text" id="Email" name="Email" placeholder="Please enter your email here">
+                    <label>Message</label>
+                        <input type="text" id="Message" name="Message" placeholder="Please enter your message here">
+                        <input type="submit" value="Submit">
+                </form>
+        </div>
+    </div>
+
+<!--footer section-->
+    <footer>
+        <p>
+            <center id="foot_text">&copy; Prosper Counsulting Inc., <a href="https://learncodinganywhere.com/">The Tech Academy</a></center><br>
+        </p>
+    </footer>
+
+
+
+
 
 </body>
 </html>
