--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -35,6 +35,54 @@
 		<input type="submit" value="Submit">
 		</form>
 
+		<!--Light box code-->
+<!-- Images used to open the lightbox -->
+<div class="row">
+	<div class="column">
+	  <img src=".\images\dest_1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+	</div>
+	<div class="column">
+	  <img src=".\images\dest_2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+	</div>
+  </div>
+  
+  <!-- The Modal/Lightbox -->
+  <div id="myModal" class="modal">
+	<span class="close cursor" onclick="closeModal()">&times;</span>
+	<div class="modal-content">
+  
+	  <div class="mySlides">
+		<div class="numbertext">1 / 2</div>
+		<img src=".\images\dest_1.jpg" style="width:100%">
+	  </div>
+  
+	  <div class="mySlides">
+		<div class="numbertext">2 / 2</div>
+		<img src=".\images\dest_2.jpg" style="width:100%">
+	  </div>
+
+	  <!-- Next/previous controls -->
+	  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  
+	  <!-- Caption text -->
+	  <div class="caption-container">
+		<p id="caption"></p>
+	  </div>
+  
+	  <!-- Thumbnail image controls -->
+	  <div class="column">
+		<img class="demo" src=".\images\dest_1.jpg" onclick="currentSlide(1)" alt="Nature">
+	  </div>
+  
+	  <div class="column">
+		<img class="demo" src=".\images\dest_2.jpg" onclick="currentSlide(2)" alt="Snow">
+	  </div>
+  
+	</div>
+  </div>
+		<!--end light box code-->
+<script src=".\js\one_page_website.js"></script>
 	</body>
 	<footer>
 		<ul>
