--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -43,6 +43,7 @@
                         <div class="container">
                           <h1 class="display-4 text-light">Academy Cinemas</h1>
                           <p class="lead text-light">Sit back, relax, and enjoy the show...</p>
+                          <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#register">See our monthly movie deals</button>
                         </div>
                       </div>
                     
@@ -144,11 +145,58 @@
                             <div class="form-group">
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="button" class="btn btn-secondary btn-info popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Submit your e-mail to recieve great movie rewards.">
+                              Sign Up
+                            </button>
                         </form>
                       </div>
 
+                      <!--modal-->
+                      <div class="modal" tabindex="-1" role="dialog" id="register">
+                          <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h5 class="modal-title">Registere to recieve movie deals</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                                </button>
+                              </div>
+                              <div class="modal-body">
 
+                                  <form>
+                                      <div class="form-group">
+                                        <label for="formGroupExampleInput">First name</label>
+                                        <input type="text" class="form-control" id="firstname" placeholder="First Name...">
+                                      </div>
+                                      <div class="form-group">
+                                        <label for="formGroupExampleInput2">Last name</label>
+                                        <input type="text" class="form-control" id="lastname" placeholder="Last Name...">
+                                      </div>
+                                      <div class="form-group">
+                                        <label for="formGroupExampleInput2">Email</label>
+                                        <input type="text" class="form-control" id="email" placeholder="Email...">
+                                      </div>
+                                      <div class="form-group">
+                                        <label for="formGroupExampleInput2">Password</label>
+                                        <input type="text" class="form-control" id="password" placeholder="Password...">
+                                      </div>
+                                    </form>
+
+
+
+                              </div>
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+
+                      <!--footer-->
+                      <div class="alert alert-primary" role="alert">
+                        
                       <div class="container my-5">
                         <ul class="nav nav-inline"
                             <li class="nav-item">
@@ -164,6 +212,7 @@
                                 <small><a class="nav-link">&copy;2019 Academy Cinemas&reg;</a></small>
                             </li>
                           </div>
+                        </div>
 
 
 
@@ -176,5 +225,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script>
+    $('.popover-dismiss').popover({
+      trigger: 'focus'
+    });
+    </script>
+
   </body>
 </html>
